--- a/src/app/components/paciente/paciente-form/paciente-form/paciente-form.component.css
+++ b/src/app/components/paciente/paciente-form/paciente-form/paciente-form.component.css
@@ -19,6 +19,26 @@
     margin-top: 30px;
 }
 
+.form-control.ng-touched.ng-invalid {
+    border: 2px solid red;
+}
+
+.form-control.ng-valid {
+    border: 2px solid green;
+}
+
+button, button:disabled, button:focus {
+    margin-top: 30px;
+    background-color: #284b63;
+    border-color: #284b63;
+}
+
+button:hover {
+    background-color: #d9d9d9;
+    border-color: #d9d9d9;
+    color: #353535;
+}
+
 i, span {
     background-color: #284b63;
     color: #fff;
