--- a/src/app/components/paciente/paciente.component.css
+++ b/src/app/components/paciente/paciente.component.css
@@ -30,6 +30,7 @@
 button, button:disabled, button:focus {
     background-color: #284b63;
     border-color: #284b63;
+    margin: 0px 5px;
 }
 
 button:hover {
