--- a/src/app/components/paciente/paciente.component.html
+++ b/src/app/components/paciente/paciente.component.html
@@ -10,7 +10,8 @@
                     <div class="input-group">
                         <span class="input-group-text"><i class="bi bi-person-lines-fill"></i></span>
                         <input required maxlength="30" minlength="3" type="text" class="form-control"
-                            id="nombre-paciente" ngModel name="nombre-paciente" #nombrePaciente="ngModel">
+                            id="nombre-paciente" ngModel name="nombre-paciente" #nombrePaciente="ngModel"
+                            placeholder="Ingrese el primer nombre, o ambos">
                     </div>
                 </div>
                 <button [disabled]="nombrePaciente.invalid" type="submit" class="btn btn-primary"
@@ -38,8 +39,11 @@
                             <td>{{paciente.afiliacionSalud}}</td>
                             <td>ATENCIONES</td>
                             <td>
-                                <button [routerLink]="['form']" class="btn btn-primary"
-                                    type="submit">Modificar datos</button>
+                                <div class="row">
+                                    <button [routerLink]="['form', paciente.idPaciente]" class="btn btn-primary"
+                                        type="button">Modificar</button>
+                                    <button class="btn btn-primary" type="button" (click)="deletePatient(paciente)">Eliminar</button>
+                                </div>
                             </td>
                         </tr>
                     </tbody>
