búsqueda de pacientes para agendar hora de atención

--- a/src/app/components/busqueda/busqueda-pacientes/busqueda-paciente/busqueda-paciente.component.html
+++ b/src/app/components/busqueda/busqueda-pacientes/busqueda-paciente/busqueda-paciente.component.html
@@ -1,6 +1,6 @@
 <form>
     <div class="form-group">
-        <label for="nombre-paciente">Buscar paciente por su nombre:</label>
+        <label for="nombre-paciente">Buscar paciente:</label>
         <div class="input-group">
             <span class="input-group-text"><i class="bi bi-person-lines-fill"></i></span>
             <input required maxlength="30" minlength="3" type="text" class="form-control"
