--- a/src/app/components/hora-atencion/agenda/horario/nuevo-horario-form/nuevo-horario-form.component.html
+++ b/src/app/components/hora-atencion/agenda/horario/nuevo-horario-form/nuevo-horario-form.component.html
@@ -1,129 +1,265 @@
-<div class="container">
+<div class="container" id="main">
   <div class="row" id="title">
-    <div class="col-lg-12">
+    <div class="col-lg-6">
       <h2>Nuevo horario de atención</h2>
       <h5>Complete los siguientes campos: </h5>
+    </div>
+    <div class="col-lg-6 text-right">
+      <button class="btn btn-primary" type="button" id="search-button" data-toggle="modal"
+        data-target="#searchPatient">Buscar paciente</button>
     </div>
   </div>
   <div class="row">
     <div class="col-lg-12">
-      <form [formGroup]="nuevoHorarioForm" novalidate>
-
-        <div class="row input">
+      <form>
+        <div class="row">
           <!-- Nombre paciente -->
-          <div class="col-lg-5">
+          <div class="col-lg-6">
             <label for="nombre" class="form-label">Nombre</label>
             <div class="input-group">
               <span class="input-group-text"><i class="bi bi-person-fill"></i></span>
-              <input formControlName="nombrePaciente" type="text" class="form-control" id="nombre" name="nombre">
-              <div *ngIf="nombrePaciente?.invalid && nombrePaciente?.touched" class="col-lg-12">
-                <small class="text-danger">Debes ingresar el nombre del paciente!</small>
+              <input type="text" class="form-control" id="nombre" name="nombre" ngModel [(ngModel)]="paciente.nombre"
+                #nombrePaciente="ngModel" required minlength="3" maxlength="30" pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1\s]+$">
+
+              <!-- Manejo de errores del campo -->
+              <div *ngIf="nombrePaciente?.invalid && (nombrePaciente?.touched || nombrePaciente?.dirty)"
+                class="col-lg-12">
+                <div *ngIf="nombrePaciente.errors?.required">
+                  <small class="text-danger">Se debe ingresar el nombre del paciente!</small>
+                </div>
+                <div *ngIf="nombrePaciente.errors?.minlength">
+                  <small class="text-danger">El nombre debe poseer un mínimo de tres
+                    caracteres!</small>
+                </div>
+                <div *ngIf="nombrePaciente.errors?.pattern">
+                  <small class="text-danger">El nombre no debe contener dígitos ni caracteres
+                    especiales!</small>
+                </div>
               </div>
             </div>
           </div>
 
           <!-- Apellido paciente -->
-          <div class="col-lg-5">
-            <label for="apellido" class="form-label">Apellido</label>
-            <div class="input-group">
-              <span class="input-group-text"><i class="bi bi-person-fill"></i></span>
-              <input formControlName="apellidoPaciente" type="text" class="form-control" id="apellido" name="apellido">
-              <div *ngIf="apellidoPaciente?.invalid && apellidoPaciente?.touched" class="col-lg-12">
-                <small class="text-danger">Debes ingresar el apellido del paciente!</small>
+          <div class="col-lg-6">
+            <div class="form-group">
+              <label for="apellido-paciente">Apellidos:</label>
+              <div class="input-group">
+                <span class="input-group-text"><i class="bi bi-person-fill"></i></span>
+                <input id="apellido-paciente" name="apellido-paciente" type="text" class="form-control"
+                  [(ngModel)]="paciente.apellido" ngModel #apellidoPaciente="ngModel" required minlength="3"
+                  maxlength="30" pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1\s]+$">
+
+                <!-- Manejo de errores -->
+                <div *ngIf="apellidoPaciente?.invalid && (apellidoPaciente?.touched || apellidoPaciente?.dirty)"
+                  class="col-lg-12">
+                  <div *ngIf="apellidoPaciente.errors?.required">
+                    <small class="text-danger">Se debe ingresar el/los apellido(s) del
+                      paciente!</small>
+                  </div>
+                  <div *ngIf="apellidoPaciente.errors?.minlength">
+                    <small class="text-danger">El/los apellido(s) debe(n) poseer un mínimo de tres
+                      caracteres!</small>
+                  </div>
+                  <div *ngIf="apellidoPaciente.errors?.pattern">
+                    <small class="text-danger">El/los apellido(s) no debe(n) contener dígitos ni
+                      caracteres especiales!</small>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="row input">
+        <div class="row">
           <!-- Teléfono paciente -->
-          <div class="col-lg-5">
-            <label for="telefonoPaciente" class="form-label">Teléfono</label>
-            <div class="input-group">
-              <span class="input-group-text"><i class="bi bi-telephone-forward-fill"></i></span>
-              <span class="input-group-text" id="digitosPrevios">+569</span>
-              <input formControlName="telefonoPaciente" type="text" class="form-control"
-                aria-describedby="digitosPrevios">
-              <div *ngIf="telefonoPaciente?.invalid && telefonoPaciente?.touched" class="col-lg-12">
-                <div *ngIf="telefonoPaciente?.errors?.required">
-                  <small class="text-danger">Debes ingresar el número de teléfono del paciente!</small>
+          <div class="col-lg-6">
+            <div class="form-group">
+              <label for="telefono-paciente">Telefono:</label>
+              <div class="input-group">
+                <span class="input-group-text"><i class="bi bi-telephone-forward-fill"></i></span>
+                <span class="input-group-text">+569</span>
+                <input id="telefono-paciente" name="telefono-paciente" type="text" class="form-control"
+                  [(ngModel)]="paciente.telefono" ngModel #telefonoPaciente="ngModel" required minlength="8"
+                  maxlength="8" pattern="^[0-9]+$">
+                <div class="col-lg-12">
+                  <small class="form-text text-secondary">No es necesario que ingrese "+569"</small>
                 </div>
-                <div *ngIf="telefonoPaciente?.errors?.pattern">
-                  <small class="text-danger">No se pueden ingresar letras y/o caracteres!</small>
-                </div>
-                <div *ngIf="telefonoPaciente?.errors">
-                  <small class="text-danger">El número de teléfono debe tener un total de 8 dígitos!</small>
+
+                <!-- Manejo de errores -->
+                <div *ngIf="telefonoPaciente?.invalid && (telefonoPaciente?.touched || telefonoPaciente?.dirty)"
+                  class="col-lg-12">
+                  <div *ngIf="telefonoPaciente.errors?.required">
+                    <small class="text-danger">Se debe ingresar el número de teléfono del
+                      paciente!</small>
+                  </div>
+                  <div *ngIf="telefonoPaciente.errors?.minlength">
+                    <small class="text-danger">El número de teléfono debe poseer un total de 8
+                      dígitos!</small>
+                  </div>
+                  <div *ngIf="telefonoPaciente.errors?.pattern">
+                    <small class="text-danger">El número de teléfono solo debe contener
+                      dígitos!</small>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
 
           <!-- Afiliación de salud del paciente -->
-          <div class="col-lg-5">
-            <label for="afiliacionSaludPaciente" class="form-label">Afiliación de salud</label>
-            <div class="input-group">
-              <span class="input-group-text"><i class="bi bi-file-medical-fill"></i></span>
-              <input formControlName="afiliacionSaludPaciente" type="text" class="form-control"
-                id="afiliacionSaludPaciente" name="afiliacionSaludPaciente">
-              <div *ngIf="afiliacionSaludPaciente?.invalid && afiliacionSaludPaciente?.touched" class="col-lg-12">
-                <small class="text-danger">Debes ingresar la afiliación de salud del paciente!</small>
+          <div class="col-lg-6">
+            <div class="form-group">
+              <label for="afiliacion-salud-paciente">Afiliación de salud:</label>
+              <div class="input-group">
+                <span class="input-group-text"><i class="bi bi-file-medical-fill"></i></span>
+                <input id="afiliacion-salud-paciente" name="afiliacion-salud-paciente" type="text" class="form-control"
+                  [(ngModel)]="paciente.afiliacionSalud" ngModel #afiliacionSaludPaciente="ngModel" required
+                  maxlength="30">
+
+                <!-- Manejo de errores -->
+                <div
+                  *ngIf="afiliacionSaludPaciente?.invalid && (afiliacionSaludPaciente?.touched || afiliacionSaludPaciente?.dirty)"
+                  class="col-lg-12">
+                  <div *ngIf="afiliacionSaludPaciente.errors?.required">
+                    <small class="text-danger">Se debe ingresar la afiliación de salud del
+                      paciente!</small>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="row input">
+        <div class="row">
           <!-- Fecha de la atención -->
-          <div class="col-lg-5">
-            <label for="fechaAtencion" class="form-label">Fecha de la atención</label>
-            <div class="input-group">
-              <span class="input-group-text"><i class="bi bi-calendar2-check-fill"></i></span>
-              <input formControlName="fechaAtencion" type="date" class="form-control" id="fechaAtencion"
-                name="fechaAtencion">
-              <div *ngIf="fechaAtencion?.invalid && fechaAtencion?.touched" class="col-lg-12">
-                <small class="text-danger">Debes ingresar la fecha de la atención!</small>
+          <div class="col-lg-6">
+            <div class="form-group">
+              <label for="fecha-atencion" class="form-label">Fecha de la atención:</label>
+              <div class="input-group">
+                <span class="input-group-text"><i class="bi bi-calendar2-check-fill"></i></span>
+                <input type="date" class="form-control" id="fecha-atencion" name="fecha-atencion" ngModel
+                  [(ngModel)]="horarioAtencion.fechaAtencion" #fechaAtencion="ngModel" required>
+                <div *ngIf="fechaAtencion?.invalid && (fechaAtencion?.touched || fechaAtencion?.dirty)"
+                  class="col-lg-12">
+                  <small class="text-danger">Se debe ingresar la fecha de la atención!</small>
+                </div>
               </div>
             </div>
           </div>
 
           <!-- Hora de la atención -->
-          <div class="col-lg-5">
-            <label for="horaAtencion" class="form-label">Hora de la atención</label>
-            <div class="input-group">
-              <span class="input-group-text"><i class="bi bi-clock-fill"></i></span>
-              <input formControlName="horaAtencion" type="time" class="form-control" id="horaAtencion"
-                name="horaAtencion">
-              <div *ngIf="horaAtencion?.invalid && horaAtencion?.touched" class="col-lg-12">
-                <small class="text-danger">Debes ingresar la hora de la atención!</small>
+          <div class="col-lg-6">
+            <div class="form-group">
+              <label for="hora-atencion" class="form-label">Hora de la atención:</label>
+              <div class="input-group">
+                <span class="input-group-text"><i class="bi bi-clock-fill"></i></span>
+                <input type="time" class="form-control" id="hora-atencion" name="hora-atencion" ngModel
+                  [(ngModel)]="horarioAtencion.horaAtencion" #horaAtencion="ngModel" required>
+                <div *ngIf="horaAtencion?.invalid && (horaAtencion?.touched || horaAtencion?.dirty)" class="col-lg-12">
+                  <small class="text-danger">Se debe ingresar la hora de la atención!</small>
+                </div>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="row input">
+        <div class="row">
           <!-- Número de consulta a la que asiste el paciente -->
           <div class="col-lg-2">
-            <label for="nroConsulta" class="form-label">N° consulta</label>
+            <label for="nro-consulta" class="form-label">N° consulta:</label>
             <div class="input-group">
               <span class="input-group-text"><i class="bi bi-hash"></i></span>
-              <input formControlName="nroConsulta" type="text" class="form-control" id="nroConsulta"
-                name="nroConsulta">
-              <div *ngIf="nroConsulta?.invalid && nroConsulta?.touched" class="col-lg-12">
-                <small class="text-danger">Debes ingresar un N° válido!</small>
+              <input type="number" class="form-control" id="nro-consulta" name="nro-consulta" ngModel
+                [(ngModel)]="horarioAtencion.nroConsulta" #nroConsulta="ngModel" pattern="^[0-9]+$" min="1" max="10">
+              <div *ngIf="nroConsulta?.invalid && (nroConsulta?.touched || nroConsulta?.dirty)" class="col-lg-12">
+                <div *ngIf="nroConsulta.errors?.pattern">
+                  <small class="text-danger">Solo se permite el ingreso de 2 dígitos!</small>
+                </div>
+                <div *ngIf="nroConsulta.errors?.max || nroConsulta.errors?.min">
+                  <small class="text-danger">El número de consulta debe estar entre el 1 y 10!</small>
+                </div>
               </div>
             </div>
           </div>
         </div>
 
-        <button [disabled]="nuevoHorarioForm.invalid" type="submit" class="btn btn-primary"
-          (click)="guardarNuevoHorario()" *ngIf="!horarioAtencion.idAtencion;else updateButton">Guardar
-          horario</button>
+        <div class="col-lg text-center">
+          <!-- Si se desea crear una atención, se muestra este botón -->
+          <button [disabled]="nombrePaciente.invalid || apellidoPaciente.invalid || telefonoPaciente.invalid ||
+        afiliacionSaludPaciente.invalid || fechaAtencion.invalid || horaAtencion.invalid || nroConsulta.invalid"
+            type="submit" class="btn btn-primary" (click)="guardarNuevoHorario()"
+            *ngIf="!horarioAtencion.idAtencion;else updateButton">Guardar
+            horario</button>
 
-        <ng-template #updateButton>
-          <button [disabled]="nuevoHorarioForm.invalid" type="submit" class="btn btn-primary"
-            (click)="updateHorarioAtencion()">Guardar cambios</button>
-        </ng-template>
+          <!-- Si se desea actualizar una atención, se muestra este botón -->
+          <ng-template #updateButton>
+            <button [disabled]="nombrePaciente.invalid || apellidoPaciente.invalid || telefonoPaciente.invalid ||
+          afiliacionSaludPaciente.invalid || fechaAtencion.invalid || horaAtencion.invalid || nroConsulta.invalid"
+              type="submit" class="btn btn-primary" (click)="updateHorarioAtencion()">Guardar cambios</button>
+          </ng-template>
+        </div>
       </form>
+    </div>
+  </div>
+</div>
+
+<!-- Modal para buscar pacientes -->
+<div class="modal fade bd-example-modal-lg" id="searchPatient" tabindex="-1" role="dialog"
+  aria-labelledby="searchPatientLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+
+      <!-- Modal header -->
+      <div class="modal-header">
+        <div class="col-lg-6">
+          <h3 class="modal-title" id="searchPatientLabel">Buscar pacientes</h3>
+          <h6 class="modal-title">
+            Ingrese el primer, segundo, o ambos nombres del paciente en el campo de búsqueda.
+          </h6>
+        </div>
+        <div class="col-lg-6">
+          <app-busqueda-paciente (searchPatientEvent)="searchPatients($event)"></app-busqueda-paciente>
+        </div>
+      </div>
+
+      <!-- Modal body -->
+      <div class="modal-body">
+        <div class="col-lg-12 text-center" *ngIf="!pacientes">
+          <i class="bi bi-people-fill" id="no-patients"></i>
+          <h3>Los pacientes encontrados serán desplegados aquí</h3>
+        </div>
+        <div class="col-lg-12 text-center" *ngIf="pacientes">
+          <table class="table table-bordered">
+            <thead class="table-dark">
+              <tr>
+                <th>Nombre</th>
+                <th>Afiliación de salud</th>
+                <th>Opciones</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let paciente of pacientes">
+                <td>{{paciente.nombre + " " + paciente.apellido}}</td>
+                <td>{{paciente.afiliacionSalud}}</td>
+                <td>
+                  <div class="row">
+                    <div class="col-lg text-center">
+                      <button (click)="loadPatientData(paciente.idPaciente)" class="btn btn-primary" type="button"
+                        data-dismiss="modal">Seleccionar</button>
+                    </div>
+                  </div>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+
+      <!-- Modal footer -->
+      <div class="modal-footer">
+        <div class="col-lg text-center">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+        </div>
+      </div>
     </div>
   </div>
 </div>
