--- a/src/app/components/paciente/paciente-form/paciente-form/paciente-form.component.html
+++ b/src/app/components/paciente/paciente-form/paciente-form/paciente-form.component.html
@@ -199,7 +199,7 @@
                                 <!-- Manejo de errores -->
                                 <div *ngIf="afiliacionSaludPaciente?.invalid && (afiliacionSaludPaciente?.touched || afiliacionSaludPaciente?.dirty)"
                                     class="col-lg-12">
-                                    <div *ngIf="ocupacionPaciente.errors?.required">
+                                    <div *ngIf="afiliacionSaludPaciente.errors?.required">
                                         <small class="text-danger">Se debe ingresar la afiliación de salud del
                                             paciente!</small>
                                     </div>
