--- a/src/app/components/hora-atencion/agenda/horario/nuevo-horario-form/nuevo-horario-form.component.css
+++ b/src/app/components/hora-atencion/agenda/horario/nuevo-horario-form/nuevo-horario-form.component.css
@@ -15,9 +15,8 @@
     color: #284b63;
 }
 
-#search-button {
-    margin-top: 77px;
-    margin-left: 20px;
+#results {
+    margin-top: 20px;
 }
 
 #title {
@@ -34,30 +33,13 @@
     border: 2px solid green;
 }
 
-.modal-content {
-    padding-top: 20px;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-bottom: 60px;
-}
-
-.modal-header {
-    border-bottom: 5px solid #284b63;
-}
-
 .table-dark {
     background-color: #284b63;
 }
 
-button, button:disabled, button:focus {
+button, button:disabled, button:focus, button:hover {
     background-color: #284b63;
     border-color: #284b63;
-}
-
-button:hover {
-    background-color: #d9d9d9;
-    border-color: #d9d9d9;
-    color: #353535;
 }
 
 i {
