--- a/src/app/components/hora-atencion/agenda/horario/nuevo-horario-form/nuevo-horario-form.component.html
+++ b/src/app/components/hora-atencion/agenda/horario/nuevo-horario-form/nuevo-horario-form.component.html
@@ -1,170 +1,215 @@
 <div class="container" id="main">
+  <!-- Título -->
   <div class="row" id="title">
     <div class="col-lg-12">
       <h2>Nuevo horario de atención</h2>
-      <h5>Complete los siguientes campos: </h5>
+      <h5>Ingrese los datos solicitados para agendar el horario de atención.</h5>
     </div>
   </div>
+
+  <!-- Contenido principal -->
   <div class="row">
-    <div class="col-lg-6" *ngIf="!paciente">
+
+    <!-- Despliega vista que permite la elección entre un paciente permanente y uno nuevo -->
+    <div class="col-lg-6" *ngIf="!paciente && pacientePermanente == undefined">
+      <div class="row">
+        <h5>Seleccione el tipo de paciente; si este es nuevo en la consulta, se le permitirá ingresar sus datos.</h5>
+      </div>
+      <div class="row icon-row">
+        <div class="col-lg-6">
+          <i class="bi bi-person-check-fill icons"></i>
+        </div>
+        <div class="col-lg-6">
+          <i class="bi bi-person-plus-fill icons"></i>
+        </div>
+      </div>
+      <div class="row button-row">
+        <div class="col-lg-6 text-center">
+          <button (click)="permanentOrNewPatient(true)" class="btn btn-primary btn-icons"
+            type="button">Permanente</button>
+        </div>
+        <div class="col-lg-6 text-center">
+          <button (click)="permanentOrNewPatient(false)" class="btn btn-primary btn-icons" type="button">Nuevo</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Vista para el paciente permanente -->
+    <div class="col-lg-6" *ngIf="!paciente && pacientePermanente">
       <div class="row">
         <div class="col-lg-12">
+          <!-- Permite la búsqueda entre todos los pacientes -->
           <app-busqueda-paciente (searchPatientEvent)="searchPatients($event)"></app-busqueda-paciente>
         </div>
       </div>
       <div class="row" id="results">
-          <div class="col-lg-12 text-center" *ngIf="!pacientes">
-            <i class="bi bi-people-fill" id="no-patients"></i>
-            <h3>Los pacientes encontrados serán desplegados aquí</h3>
-          </div>
-          <div class="col-lg-12 text-center" *ngIf="pacientes">
-            <table class="table table-bordered">
-              <thead class="table-dark">
-                <tr>
-                  <th>Nombre</th>
-                  <th>Afiliación</th>
-                  <th>Opciones</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr *ngFor="let paciente of pacientes">
-                  <td>{{paciente.nombre + " " + paciente.apellido}}</td>
-                  <td>{{paciente.afiliacionSalud}}</td>
-                  <td>
-                    <div class="row">
-                      <div class="col-lg text-center">
-                        <button (click)="loadPatientData(paciente.idPaciente)" class="btn btn-primary" type="button"
-                          data-dismiss="modal">Seleccionar</button>
-                      </div>
+        <div class="col-lg-12 text-center" *ngIf="!pacientes">
+          <i class="bi bi-people-fill" id="no-patients"></i>
+          <h3>Los pacientes encontrados serán desplegados aquí</h3>
+        </div>
+        <div class="col-lg-12 text-center" *ngIf="pacientes">
+          <table class="table table-bordered">
+            <thead class="table-dark">
+              <tr>
+                <th>Nombre</th>
+                <th>Afiliación</th>
+                <th>Opciones</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let paciente of pacientes">
+                <td>{{paciente.nombre + " " + paciente.apellido}}</td>
+                <td>{{paciente.afiliacionSalud}}</td>
+                <td>
+                  <div class="row">
+                    <div class="col-lg text-center">
+                      <button (click)="loadPatientData(paciente.idPaciente)" class="btn btn-primary" type="button"
+                        data-dismiss="modal">Seleccionar</button>
                     </div>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+                  </div>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
+
+    <!-- Vista paciente nuevo -->
+    <div class="col-lg-6" *ngIf="!paciente && pacientePermanente == false">
+
+      <!-- Formulario para crear al nuevo paciente -->
+      <form>
+
+        <!-- Nombre paciente-->
+        <div class="col-lg-12">
+          <label for="nombre" class="form-label">Nombre(s)</label>
+          <div class="input-group">
+            <span class="input-group-text"><i class="bi bi-person-fill"></i></span>
+            <input type="text" class="form-control" id="nombre" name="nombre" ngModel #nombrePaciente="ngModel" required
+              minlength="3" maxlength="30" pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1\s]+$" [(ngModel)]="nombre">
+
+            <!-- Manejo de errores del campo -->
+            <div *ngIf="nombrePaciente?.invalid && (nombrePaciente?.touched || nombrePaciente?.dirty)"
+              class="col-lg-12">
+              <div *ngIf="nombrePaciente.errors?.required">
+                <small class="text-danger">Se debe ingresar el nombre del paciente!</small>
+              </div>
+              <div *ngIf="nombrePaciente.errors?.minlength">
+                <small class="text-danger">El nombre debe poseer un mínimo de tres
+                  caracteres!</small>
+              </div>
+              <div *ngIf="nombrePaciente.errors?.pattern">
+                <small class="text-danger">El nombre no debe contener dígitos ni caracteres
+                  especiales!</small>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Apellido del paciente -->
+        <div class="col-lg-12">
+          <div class="form-group">
+            <label for="apellido-paciente">Apellido(s)</label>
+            <div class="input-group">
+              <span class="input-group-text"><i class="bi bi-person-fill"></i></span>
+              <input id="apellido-paciente" name="apellido-paciente" type="text" class="form-control"
+                [(ngModel)]="apellido" ngModel #apellidoPaciente="ngModel" required minlength="3" maxlength="30"
+                pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1\s]+$">
+
+              <!-- Manejo de errores  -->
+              <div *ngIf="apellidoPaciente?.invalid && (apellidoPaciente?.touched || apellidoPaciente?.dirty)"
+                class="col-lg-12">
+                <div *ngIf="apellidoPaciente.errors?.required">
+                  <small class="text-danger">Se debe ingresar el/los apellido(s) del
+                    paciente!</small>
+                </div>
+                <div *ngIf="apellidoPaciente.errors?.minlength">
+                  <small class="text-danger">El/los apellido(s) debe(n) poseer un mínimo de tres
+                    caracteres!</small>
+                </div>
+                <div *ngIf="apellidoPaciente.errors?.pattern">
+                  <small class="text-danger">El/los apellido(s) no debe(n) contener dígitos ni
+                    caracteres especiales!</small>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Teléfono del paciente -->
+        <div class="col-lg-12">
+          <div class="form-group">
+            <label for="telefono-paciente">Telefono</label>
+            <div class="input-group">
+              <span class="input-group-text"><i class="bi bi-telephone-forward-fill"></i></span>
+              <span class="input-group-text">+569</span>
+              <input id="telefono-paciente" name="telefono-paciente" type="text" class="form-control"
+                [(ngModel)]="nroTelefono" ngModel #telefonoPaciente="ngModel" required minlength="8" maxlength="8"
+                pattern="^[0-9]+$">
+              <div class="col-lg-12">
+                <small class="form-text text-secondary">No es necesario que ingrese "+569"</small>
+              </div>
+
+              <!-- Manejo de errores  -->
+              <div *ngIf="telefonoPaciente?.invalid && (telefonoPaciente?.touched || telefonoPaciente?.dirty)"
+                class="col-lg-12">
+                <div *ngIf="telefonoPaciente.errors?.required">
+                  <small class="text-danger">Se debe ingresar el número de teléfono del
+                    paciente!</small>
+                </div>
+                <div *ngIf="telefonoPaciente.errors?.minlength">
+                  <small class="text-danger">El número de teléfono debe poseer un total de 8
+                    dígitos!</small>
+                </div>
+                <div *ngIf="telefonoPaciente.errors?.pattern">
+                  <small class="text-danger">El número de teléfono solo debe contener
+                    dígitos!</small>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Afiliación de salud -->
+        <div class="col-lg-12">
+          <div class="form-group">
+            <label for="afiliacion-salud-paciente">Afiliación de salud</label>
+            <div class="input-group">
+              <span class="input-group-text"><i class="bi bi-file-medical-fill"></i></span>
+              <input id="afiliacion-salud-paciente" name="afiliacion-salud-paciente" type="text" class="form-control"
+                [(ngModel)]="afiliacion" ngModel #afiliacionSaludPaciente="ngModel" required maxlength="30">
+
+              <!-- Manejo de errores  -->
+              <div
+                *ngIf="afiliacionSaludPaciente?.invalid && (afiliacionSaludPaciente?.touched || afiliacionSaludPaciente?.dirty)"
+                class="col-lg-12">
+                <div *ngIf="afiliacionSaludPaciente.errors?.required">
+                  <small class="text-danger">Se debe ingresar la afiliación de salud del
+                    paciente!</small>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+          <div class="col-lg">
+            <button
+              [disabled]="nombrePaciente.invalid || apellidoPaciente.invalid || telefonoPaciente.invalid || afiliacionSaludPaciente.invalid"
+              (click)="guardarNuevoPaciente()" class="btn btn-primary" type="button">Guardar datos</button>
+          </div>
+      </form>
+    </div>
+
+    <!-- Una vez se encuentra o se crea el paciente, se despliegan sus datos -->
     <div class="col-lg-6" *ngIf="paciente">
       <h5>Paciente: {{paciente.nombre + " " + paciente.apellido}}</h5><br>
       <h5>Número de contacto: {{paciente.telefono}}</h5>
       <h5>Afiliación de salud: {{paciente.afiliacionSalud}}</h5>
     </div>
+
+    <!-- Formulario para crear el nuevo horario de atención -->
     <div class="col-lg-6">
       <form>
-        <!-- Nombre paciente
-          <div class="col-lg-6">
-            <label for="nombre" class="form-label">Nombre</label>
-            <div class="input-group">
-              <span class="input-group-text"><i class="bi bi-person-fill"></i></span>
-              <input type="text" class="form-control" id="nombre" name="nombre" ngModel [(ngModel)]="paciente.nombre"
-                #nombrePaciente="ngModel" required minlength="3" maxlength="30" pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1\s]+$">
-
-               Manejo de errores del campo 
-              <div *ngIf="nombrePaciente?.invalid && (nombrePaciente?.touched || nombrePaciente?.dirty)"
-                class="col-lg-12">
-                <div *ngIf="nombrePaciente.errors?.required">
-                  <small class="text-danger">Se debe ingresar el nombre del paciente!</small>
-                </div>
-                <div *ngIf="nombrePaciente.errors?.minlength">
-                  <small class="text-danger">El nombre debe poseer un mínimo de tres
-                    caracteres!</small>
-                </div>
-                <div *ngIf="nombrePaciente.errors?.pattern">
-                  <small class="text-danger">El nombre no debe contener dígitos ni caracteres
-                    especiales!</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-           Apellido paciente 
-          <div class="col-lg-6">
-            <div class="form-group">
-              <label for="apellido-paciente">Apellidos:</label>
-              <div class="input-group">
-                <span class="input-group-text"><i class="bi bi-person-fill"></i></span>
-                <input id="apellido-paciente" name="apellido-paciente" type="text" class="form-control"
-                  [(ngModel)]="paciente.apellido" ngModel #apellidoPaciente="ngModel" required minlength="3"
-                  maxlength="30" pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1\s]+$">
-
-                Manejo de errores 
-                <div *ngIf="apellidoPaciente?.invalid && (apellidoPaciente?.touched || apellidoPaciente?.dirty)"
-                  class="col-lg-12">
-                  <div *ngIf="apellidoPaciente.errors?.required">
-                    <small class="text-danger">Se debe ingresar el/los apellido(s) del
-                      paciente!</small>
-                  </div>
-                  <div *ngIf="apellidoPaciente.errors?.minlength">
-                    <small class="text-danger">El/los apellido(s) debe(n) poseer un mínimo de tres
-                      caracteres!</small>
-                  </div>
-                  <div *ngIf="apellidoPaciente.errors?.pattern">
-                    <small class="text-danger">El/los apellido(s) no debe(n) contener dígitos ni
-                      caracteres especiales!</small>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          Teléfono paciente 
-          <div class="col-lg-6">
-            <div class="form-group">
-              <label for="telefono-paciente">Telefono:</label>
-              <div class="input-group">
-                <span class="input-group-text"><i class="bi bi-telephone-forward-fill"></i></span>
-                <span class="input-group-text">+569</span>
-                <input id="telefono-paciente" name="telefono-paciente" type="text" class="form-control"
-                  [(ngModel)]="paciente.telefono" ngModel #telefonoPaciente="ngModel" required minlength="8"
-                  maxlength="8" pattern="^[0-9]+$">
-                <div class="col-lg-12">
-                  <small class="form-text text-secondary">No es necesario que ingrese "+569"</small>
-                </div>
-
-                Manejo de errores 
-                <div *ngIf="telefonoPaciente?.invalid && (telefonoPaciente?.touched || telefonoPaciente?.dirty)"
-                  class="col-lg-12">
-                  <div *ngIf="telefonoPaciente.errors?.required">
-                    <small class="text-danger">Se debe ingresar el número de teléfono del
-                      paciente!</small>
-                  </div>
-                  <div *ngIf="telefonoPaciente.errors?.minlength">
-                    <small class="text-danger">El número de teléfono debe poseer un total de 8
-                      dígitos!</small>
-                  </div>
-                  <div *ngIf="telefonoPaciente.errors?.pattern">
-                    <small class="text-danger">El número de teléfono solo debe contener
-                      dígitos!</small>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          Afiliación de salud del paciente
-          <div class="col-lg-6">
-            <div class="form-group">
-              <label for="afiliacion-salud-paciente">Afiliación de salud:</label>
-              <div class="input-group">
-                <span class="input-group-text"><i class="bi bi-file-medical-fill"></i></span>
-                <input id="afiliacion-salud-paciente" name="afiliacion-salud-paciente" type="text" class="form-control"
-                  [(ngModel)]="paciente.afiliacionSalud" ngModel #afiliacionSaludPaciente="ngModel" required
-                  maxlength="30">
-
-                Manejo de errores 
-                <div
-                  *ngIf="afiliacionSaludPaciente?.invalid && (afiliacionSaludPaciente?.touched || afiliacionSaludPaciente?.dirty)"
-                  class="col-lg-12">
-                  <div *ngIf="afiliacionSaludPaciente.errors?.required">
-                    <small class="text-danger">Se debe ingresar la afiliación de salud del
-                      paciente!</small>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div> -->
         <div class="row">
           <!-- Fecha de la atención -->
           <div class="col-lg-12">
@@ -234,67 +279,6 @@
         </ng-template>
 
       </form>
-    </div>
-  </div>
-</div>
-
-<div class="modal fade bd-example-modal-lg" id="searchPatient" tabindex="-1" role="dialog"
-  aria-labelledby="searchPatientLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg" role="document">
-    <div class="modal-content">
-
-      <!-- Modal header -->
-      <div class="modal-header">
-        <div class="col-lg-6">
-          <h3 class="modal-title" id="searchPatientLabel">Buscar pacientes</h3>
-          <h6 class="modal-title">
-            Ingrese el primer, segundo, o ambos nombres del paciente en el campo de búsqueda.
-          </h6>
-        </div>
-        <div class="col-lg-6">
-          <app-busqueda-paciente (searchPatientEvent)="searchPatients($event)"></app-busqueda-paciente>
-        </div>
-      </div>
-
-      <!-- Modal body -->
-      <div class="modal-body">
-        <div class="col-lg-12 text-center" *ngIf="!pacientes">
-          <i class="bi bi-people-fill" id="no-patients"></i>
-          <h3>Los pacientes encontrados serán desplegados aquí</h3>
-        </div>
-        <div class="col-lg-12 text-center" *ngIf="pacientes">
-          <table class="table table-bordered">
-            <thead class="table-dark">
-              <tr>
-                <th>Nombre</th>
-                <th>Afiliación de salud</th>
-                <th>Opciones</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let paciente of pacientes">
-                <td>{{paciente.nombre + " " + paciente.apellido}}</td>
-                <td>{{paciente.afiliacionSalud}}</td>
-                <td>
-                  <div class="row">
-                    <div class="col-lg text-center">
-                      <button (click)="loadPatientData(paciente.idPaciente)" class="btn btn-primary" type="button"
-                        data-dismiss="modal">Seleccionar</button>
-                    </div>
-                  </div>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-
-      <!-- Modal footer -->
-      <div class="modal-footer">
-        <div class="col-lg text-center">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-        </div>
-      </div>
     </div>
   </div>
 </div>
