--- a/src/app/components/paciente/lista-pacientes.component.css
+++ b/src/app/components/paciente/lista-pacientes.component.css
@@ -27,16 +27,10 @@
     background-color: #284b63;
 }
 
-button, button:disabled, button:focus {
+button, button:disabled, button:focus, button:hover {
     background-color: #284b63;
     border-color: #284b63;
     margin: 0px 5px;
-}
-
-button:hover {
-    background-color: #d9d9d9;
-    border-color: #d9d9d9;
-    color: #353535;
 }
 
 i, span {
